<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/booklayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/rounded_border"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="200dip"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/bookimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@drawable/border"
                    android:maxHeight="200dp"
                    android:maxWidth="140dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/loading"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="200dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:text="Title"
                    android:textColor="#6d7065"
                    android:textStyle="bold"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/txttitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:text="Moby Dick"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:text="Author"
                    android:textColor="#6d7065"
                    android:textStyle="bold"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/txtauthor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:text="Herman Melville"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/bookdescriptionLarge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="130dp"
            android:layout_margin="5dip"
            android:text="@string/lorem"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical" 
            android:paddingBottom="40dp">

            <Button
                android:id="@+id/librarybutton"
                android:layout_width="200dip"
                android:layout_height="40dip"
                android:layout_margin="5dip"
                android:background="@drawable/button_custom"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/library"
                android:textColor="#6d7065"
                android:textSize="20dp" />
                
                <Button
                android:id="@+id/bookstorebutton"
                android:layout_width="200dip"
                android:layout_height="40dip"
                android:layout_margin="5dip"
                android:background="@drawable/button_custom"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/book_store"
                android:textColor="#6d7065"
                android:textSize="20dp" />

            <Button
                android:id="@+id/kindlebutton"
                android:layout_width="200dip"
                android:layout_height="40dip"
                android:layout_margin="5dip"
                android:background="@drawable/button_custom"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/kindle"
                android:textColor="#6d7065"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>